--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@
  * Copyright 2012-2013 Mattia Larentis
  * http://www.apache.org/licenses/LICENSE-2.0
  */
-.bootstrap-switch {
+ .bootstrap-switch {
   display: inline-block;
   direction: ltr;
   cursor: pointer;
@@ -4635,6 +4635,8 @@ Created using IcoMoon - icomoon.io
 
 .card .card-body {
   min-height: 190px;
+  text-align:center;
+  
 }
 
 .card[data-background-color="orange"] {
