--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@
  * Copyright 2012-2013 Mattia Larentis
  * http://www.apache.org/licenses/LICENSE-2.0
  */
- .bootstrap-switch {
+ /*.bootstrap-switch {
   display: inline-block;
   direction: ltr;
   cursor: pointer;
@@ -290,13 +290,13 @@
 
 .bootstrap-switch-on .bootstrap-switch-handle-off {
   opacity: 0;
-}
+}*/
 
 /* Estilos funcionales;
  * Necesario para funcionamiento noUiSlider.
  * No hay que cambiar las reglas para que funcione correcto.
  */
-.noUi-target,
+/*.noUi-target,
 .noUi-target * {
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
@@ -320,7 +320,7 @@
   height: 100%;
   position: relative;
   z-index: 1;
-  /* Fix 401 */
+  /* Fix 401 
 }
 
 .noUi-connect {
@@ -354,7 +354,7 @@
 
 /* Performance;
  * Funcionamiento de navegadores propios de capa.
- */
+ 
 .noUi-base,
 .noUi-handle {
   -webkit-transform: translate3d(0, 0, 0);
@@ -362,7 +362,7 @@
 }
 
 /* Tamaño del slider y ubicacion del handle;
- */
+ 
 .noUi-horizontal {
   height: 1px;
 }
@@ -391,7 +391,7 @@
 }
 
 /* Estilo;
- */
+ 
 .noUi-target {
   background-color: rgba(182, 182, 182, 0.3);
   border-radius: 3px;
@@ -405,7 +405,7 @@
 }
 
 /* Handles y cursores;
- */
+ 
 .noUi-draggable {
   cursor: ew-resize;
 }
@@ -437,7 +437,7 @@
 }
 
 /* Desactivado;
- */
+ 
 [disabled] .noUi-connect {
   background: #B8B8B8;
 }
@@ -450,7 +450,7 @@
 
 /* Base;
  *
- */
+ 
 .noUi-pips,
 .noUi-pips * {
   -webkit-box-sizing: border-box;
@@ -464,7 +464,7 @@
 
 /* Valores;
  *
- */
+ 
 .noUi-value {
   position: absolute;
   text-align: center;
@@ -477,7 +477,7 @@
 
 /* Marks;
  *
- */
+ 
 .noUi-marker {
   position: absolute;
   background: #CCC;
@@ -493,7 +493,7 @@
 
 /* Horizontal layout;
  *
- */
+ 
 .noUi-pips-horizontal {
   padding: 10px 0;
   height: 80px;
@@ -523,7 +523,7 @@
 
 /* Vertical layout;
  *
- */
+ 
 .noUi-pips-vertical {
   padding: 0 10px;
   height: 100%;
@@ -646,14 +646,14 @@
 
 .slider.slider-danger .noUi-handle {
   background-color: #FF3636;
-}
+}*/
 
 /*!
  * Datepicker for Bootstrap v1.7.0-dev (https://github.com/uxsolutions/bootstrap-datepicker)
  *
  * Licensed under the Apache License v2.0 (http://www.apache.org/licenses/LICENSE-2.0)
  */
-.datepicker {
+/*.datepicker {
   padding: 8px 6px;
   border-radius: 4px;
   direction: ltr;
@@ -1309,7 +1309,7 @@
   border: 1px solid #ccc;
   margin-left: -5px;
   margin-right: -5px;
-}
+}*/
 
 .btn,
 .navbar .navbar-nav > a.btn {
@@ -2018,7 +2018,7 @@ fieldset[disabled]
   right: 8px;
 }
 
-.form-control::-moz-placeholder {
+/*.form-control::-moz-placeholder {
   color: #DDDDDD;
   opacity: 1;
   filter: alpha(opacity=100);
@@ -2121,7 +2121,7 @@ fieldset[disabled]
   background-color: #FFFFFF;
 }
 
-.has-success:after,
+/*.has-success:after,
 .has-danger:after {
   font-family: 'Nucleo Outline';
   content: "\ea22";
@@ -2546,7 +2546,7 @@ textarea.form-control:focus, textarea.form-control:active {
 
 .radio.radio-inline {
   margin-top: 0;
-}
+}*/
 
 .progress-container {
   position: relative;
@@ -2720,7 +2720,7 @@ textarea.form-control:focus, textarea.form-control:active {
   color: #FFFFFF;
 }
 
-.pagination .page-item .page-link {
+/*.pagination .page-item .page-link {
   border: 0;
   border-radius: 30px !important;
   -webkit-transition: all .3s;
@@ -2813,7 +2813,7 @@ textarea.form-control:focus, textarea.form-control:active {
   background-color: #FFFFFF;
   border-color: #FFFFFF;
   color: #336699;
-}
+}*/
 
 button,
 input,
@@ -2891,9 +2891,9 @@ p {
   line-height: 1.61em;
 }
 
-.description p, p.description {
+/*.description p, p.description {
   font-size: 1.14em;
-}
+}*/
 
 .title {
   font-weight: 700;
@@ -2912,12 +2912,12 @@ p {
   margin-top: -25px;
 }
 
-.description,
+/*.description,
 .card-description,
 .footer-big p {
   color: #9A9A9A;
   font-weight: 300;
-}
+}*/
 
 .category {
   text-transform: uppercase;
@@ -2925,7 +2925,7 @@ p {
   color: #9A9A9A;
 }
 
-.text-primary {
+/*.text-primary {
   color: #336699 !important;
 }
 
@@ -2988,7 +2988,7 @@ p {
 
 .blockquote.blockquote-white small {
   color: rgba(255, 255, 255, 0.8);
-}
+}*/
 
 body {
   color: #2c2c2c;
@@ -2998,10 +2998,10 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-.main {
+/*.main {
   position: relative;
   background: #FFFFFF;
-}
+}*/
 
 /* Animations */
 .nav-pills .nav-link,
@@ -3012,7 +3012,7 @@ body {
   transition: all 300ms ease 0s;
 }
 
-.dropdown-toggle:after,
+/*.dropdown-toggle:after,
 .bootstrap-switch-label:before {
   -webkit-transition: all 150ms ease 0s;
   transition: all 150ms ease 0s;
@@ -3058,7 +3058,7 @@ body {
 
 .separator.separator-primary {
   background-color: #336699;
-}
+}*/
 
 .nav-pills .nav-item .nav-link {
   padding: 0 15.5px;
@@ -3123,9 +3123,9 @@ body {
   background-color: #FF3636;
 }
 
-.tab-space {
+/*.tab-space {
   padding: 20px 0 50px 0px;
-}
+}*/
 
 .nav-align-center {
   text-align: center;
@@ -3137,7 +3137,7 @@ body {
   display: inline-flex;
 }
 
-.btn-twitter {
+/*.btn-twitter {
   color: #55acee;
 }
 
@@ -3159,7 +3159,7 @@ body {
 
 .btn-google:hover, .btn-google:focus, .btn-google:active {
   color: #d73925;
-}
+}*/
 
 .btn-linkedin {
   color: #0077B5;
@@ -3169,7 +3169,15 @@ body {
   color: #00669c;
 }
 
-.nav-tabs {
+.btn-github {
+  color: rgb(0, 0, 0);
+}
+
+.btn-github:hover, .btn-linkedin:focus, .btn-linkedin:active {
+  color: #303030;
+}
+
+/*.nav-tabs {
   border: 0;
   padding: 15px 0.7rem;
 }
@@ -3239,7 +3247,7 @@ body {
 .nav-tabs.nav-tabs-success > .nav-item > .nav-link.active {
   border-color: #18ce0f;
   color: #18ce0f;
-}
+}*/
 
 .navbar {
   padding-top: 0.625rem;
@@ -3399,7 +3407,7 @@ body {
   border: 1px solid #888;
 }
 
-.bg-default {
+/*.bg-default {
   background-color: #888 !important;
 }
 
@@ -3690,7 +3698,7 @@ body {
   text-shadow: none;
   line-height: 0;
   outline: 0;
-}
+}*/
 
 img {
   max-width: 100%;
@@ -3702,7 +3710,7 @@ img {
           box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.3);
 }
 
-.popover {
+/*.popover {
   font-size: 14px;
   -webkit-box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.2);
@@ -3884,7 +3892,7 @@ img {
 .popover.popover-success .popover-header {
   color: #FFFFFF;
   opacity: .6;
-}
+}*/
 
 .tooltip.bs-tooltip-right .arrow:before {
   border-right-color: #FFFFFF;
@@ -3930,16 +3938,16 @@ Created using IcoMoon - icomoon.io
 /*------------------------
 	base class definition
 -------------------------*/
-.now-ui-icons {
+/*.now-ui-icons {
   display: inline-block;
   font: normal normal normal 14px/1 'Nucleo Outline';
   font-size: inherit;
   speak: none;
   text-transform: none;
-  /* Better Font Rendering */
-  -webkit-font-smoothing: antialiased;
+  /* Better Font Rendering*/
+  /*-webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+}*/
 
 /*------------------------
   change icon size
@@ -3947,7 +3955,7 @@ Created using IcoMoon - icomoon.io
 /*----------------------------------
   add a square/circle background
 -----------------------------------*/
-.now-ui-icons.circle {
+/*.now-ui-icons.circle {
   padding: 0.33333333em;
   vertical-align: -16%;
   background-color: #eee;
@@ -3955,12 +3963,12 @@ Created using IcoMoon - icomoon.io
 
 .now-ui-icons.circle {
   border-radius: 50%;
-}
+}*/
 
 /*------------------------
   list icons
 -------------------------*/
-.nc-icon-ul {
+/*.nc-icon-ul {
   padding-left: 0;
   margin-left: 2.14285714em;
   list-style-type: none;
@@ -3985,11 +3993,11 @@ Created using IcoMoon - icomoon.io
 /*------------------------
   spinning icons
 -------------------------*/
-.now-ui-icons.spin {
+/*.now-ui-icons.spin {
   -webkit-animation: nc-icon-spin 2s infinite linear;
   animation: nc-icon-spin 2s infinite linear;
 }
-
+*/
 @-webkit-keyframes nc-icon-spin {
   0% {
     -webkit-transform: rotate(0deg);
@@ -4016,7 +4024,7 @@ Created using IcoMoon - icomoon.io
 /*------------------------
 	font icons
 -------------------------*/
-.now-ui-icons.ui-1_check:before {
+/*.now-ui-icons.ui-1_check:before {
   content: "\ea22";
 }
 
@@ -4414,9 +4422,9 @@ Created using IcoMoon - icomoon.io
 
 .now-ui-icons.users_single-02:before {
   content: "\ea51";
-}
+}*/
 
-.modal-content {
+/*.modal-content {
   border-radius: 0.1875rem;
   border: none;
   -webkit-box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.5);
@@ -4457,7 +4465,7 @@ Created using IcoMoon - icomoon.io
   padding-bottom: 16px;
   padding-left: 24px;
   /* Safari 6.1+ */
-  -webkit-box-pack: justify;
+ /* -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
@@ -4478,9 +4486,9 @@ Created using IcoMoon - icomoon.io
 
 .modal-content .modal-body + .modal-footer {
   padding-top: 0;
-}
+}*/
 
-.modal-backdrop {
+/*.modal-backdrop {
   background: rgba(0, 0, 0, 0.3);
 }
 
@@ -4607,7 +4615,7 @@ Created using IcoMoon - icomoon.io
 
 .modal .modal-header .close:hover, .modal .modal-header .close:focus {
   opacity: 1;
-}
+}*/
 
 .carousel-item-next,
 .carousel-item-prev,
@@ -4776,7 +4784,7 @@ Created using IcoMoon - icomoon.io
   content: " ";
 }
 
-.index-page .page-header {
+/*.index-page .page-header {
   height: 125vh;
 }
 
@@ -4791,9 +4799,9 @@ Created using IcoMoon - icomoon.io
   padding: 0 15px;
   width: 100%;
   color: rgba(255, 255, 255, 0.5);
-}
+}*/
 
-.landing-page .header {
+/*.landing-page .header {
   height: 100vh;
   position: relative;
 }
@@ -4845,7 +4853,7 @@ Created using IcoMoon - icomoon.io
 
 .landing-page .section-contact-us a.btn {
   margin-top: 35px;
-}
+}*/
 
 .profile-page .page-header {
   min-height: 550px;
@@ -4915,7 +4923,7 @@ Created using IcoMoon - icomoon.io
   padding-bottom: 50px;
 }
 
-.section-full-page:after, .section-full-page:before {
+/*.section-full-page:after, .section-full-page:before {
   display: block;
   content: "";
   position: absolute;
@@ -4936,12 +4944,12 @@ Created using IcoMoon - icomoon.io
   /* For Safari 5.1 to 6.0 */
   /* For Opera 11.1 to 12.0 */
   /* For Firefox 3.6 to 15 */
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(227, 227, 227, 0.26)), to(rgba(55, 140, 63, 0.95)));
+  /*background: -webkit-gradient(linear, left bottom, left top, from(rgba(227, 227, 227, 0.26)), to(rgba(55, 140, 63, 0.95)));
   background: linear-gradient(0deg, rgba(227, 227, 227, 0.26), rgba(55, 140, 63, 0.95));
   /* Standard syntax */
-}
+/*}*/
 
-.section-full-page[data-image]:after {
+/*.section-full-page[data-image]:after {
   opacity: .5;
 }
 
@@ -4971,9 +4979,9 @@ Created using IcoMoon - icomoon.io
 .section-full-page .footer,
 .section-full-page .footer .copyright a {
   color: #FFFFFF;
-}
+}*/
 
-.login-page .card-login {
+/*.login-page .card-login {
   border-radius: 0.25rem;
   padding-bottom: 0.7rem;
   max-width: 320px;
@@ -5109,7 +5117,7 @@ Created using IcoMoon - icomoon.io
   font-size: 10px;
   color: #FFFFFF;
   text-decoration: none;
-}
+}*/
 
 .section {
   padding: 70px 0;
@@ -5121,7 +5129,7 @@ Created using IcoMoon - icomoon.io
   margin-top: 15px;
 }
 
-.section-navbars {
+/*.section-navbars {
   padding-bottom: 0;
 }
 
@@ -5131,7 +5139,7 @@ Created using IcoMoon - icomoon.io
 
 .section-signup {
   padding-top: 20vh;
-}
+}*/
 
 .page-header {
   height: 100vh;
@@ -5218,7 +5226,7 @@ Created using IcoMoon - icomoon.io
   z-index: 2;
 }
 
-.clear-filter:after, .clear-filter:before {
+/*.clear-filter:after, .clear-filter:before {
   display: none;
 }
 
@@ -5403,7 +5411,7 @@ Created using IcoMoon - icomoon.io
   position: absolute;
   top: 68%;
   right: 12%;
-}
+}*/
 
 [data-background-color="orange"] {
   background-color: #e95e38;
@@ -7192,7 +7200,7 @@ Created using IcoMoon - icomoon.io
 }
 
 /* References Style */
-.cc-reference .card {
+/*.cc-reference .card {
   padding: 40px;
 }
 
@@ -7228,7 +7236,7 @@ Created using IcoMoon - icomoon.io
   .cc-reference ol {
     margin-bottom: 0;
   }
-}
+}*/
 
 /* Contact Information Style */
 .cc-contact-information {
@@ -7249,7 +7257,7 @@ Created using IcoMoon - icomoon.io
 
 /* Footer */
 /* Social button style */
-.cc-facebook:hover i {
+/*.cc-facebook:hover i {
   color: #3b5998;
 }
 
@@ -7263,6 +7271,14 @@ Created using IcoMoon - icomoon.io
 
 .cc-instagram:hover i {
   color: #405de6;
+}*/
+
+.cc-github:hover i {
+  color: #000000;
+}
+
+.cc-linkedin:hover i {
+  color: #3b5998;
 }
 
 /* Credit Style */
